--- a/README.html
+++ b/README.html
@@ -45,7 +45,7 @@ a:hover {
 	<ul>
 		<li><a href="#s2s1">2.1. Basic Configuration</a></li>
 		<li><a href="#s2s2">2.2. GRUB Integration</a></li>
-		<li><a href="#s2s3">2.3. Configuration File</a></li>
+		<li><a href="#s2s3">2.3. Kernel Modules</a></li>
 		<li><a href="#s2s4">2.4. Shell</a></li>
 		<li><a href="#s2s5">2.5. Debug Console</a></li>
 		<li><a href="#s2s6">2.6. Changing the keymap</a></li>
@@ -148,17 +148,16 @@ The first line maps the first BIOS disk (hd0) to Linux disk sda. The second line
 grub-map hd0,0 LABEL=boot<br />
 grub-map hd0,2 LABEL=root
 </p>
-<h3><a name="s2s2">2.2. Kernel modules</a></h3>
+<h3><a name="s2s3">2.3. Kernel Modules</a></h3>
 <p>
-You can load kernel modules which allow kexec-loader to support more devices/filesystems/etc, to load a kernel module simply copy it to the 'modules' directory on the boot floppy. If you are using an official disk image you can download the modules package appropriate for your kernel from the project site. Your kernel version is displayed at the top of the menu and when you start the shell.
+If you are running a modular kernel (All official builds use a modular kernel) you can load modules to support hardware, filesystems and encodings not supported by the base kernel. To install a module copy it to the modules directory on the boot disk, if the module is required to access the boot disk you can create a directory called modules in the initramfs and copy it there.
 </p>
 <p>
-These are not to be confused with multiboot modules, which are modules loaded by the bootloader and passed to a multiboot kernel, they are commonly used for the same purpose as Linux kernel modules, read your OS documentation for more information.
+Some modules or hardware combinations may require arguments to be passed to the module, this is usually for ISA and non-PnP hardware. If you have such hardware you can specify arguments to be passed in kexec-loader.conf, these will only be used for modules loaded after kexec-loader.conf.
 </p>
-<p>
-If there is a modules directory in the rootfs, modules will also be loaded from it. This can be used if you want to include modules in an initramfs, for example to run the official kexec-loader build from a CD or ext2 filesystem without recompiling the kernel.
+<p class="code">
+kmod module-name arg1 arg2=value arg3 ...
 </p>
-
 <h3><a name="s2s3">2.3. Configuration File</a></h3>
 <p>
 The kexec-loader configuration is stored in a text file named kexec-loader.conf on the boot floppy, it may be in UNIX or DOS format. There must be one directive per line with arguments seperated by spaces or tabs, lines beginning with a hash (#) are ignored. You may additionally load the configuration from a GRUB install, which allows kexec-loader to be a drop-in GRUB replacement.
