--- a/README.html
+++ b/README.html
@@ -47,6 +47,7 @@ a:hover {
 		<li><a href="#s2s2">2.2. GRUB Integration</a></li>
 		<li><a href="#s2s3">2.3. Kernel Modules</a></li>
 		<li><a href="#s2s4">2.4. Changing the keymap</a></li>
+		<li><a href="#s2s5">2.5. Shell</a>
 	</ul>
 	</li>
 	<li><a href="#s3">3. Building kexec-loader</a>
@@ -163,6 +164,48 @@ If the file keymap.txt exists on the boot floppy, it will be loaded as the keyma
 </p>
 <p>
 New keymap.txt files can be downloaded <a href="http://www.solemnwarning.net/kexec-loader/keymaps/">here</a>, remember to rename them before use. If your keymap isn't available here, you can use the conv-keymap.pl script from the source download to generate one from a Linux console keymap. (normally found in /usr/share/keymaps)
+</p>
+
+<h3><a name="s2s5">2.5. Shell</a></h3>
+<p>
+There is a shell built into kexec-loader which can be used to configure and boot a target or list/find/read files to aid with configuring a boot target. To access the shell, press C at the menu screen, the shell will be displayed by default if there are no boot targets configured. The commands for configuring and booting a target are very similar to those in the configuration file, as shown below:
+</p>
+<p class="code">
+> root hda1<br />
+> kernel /boot/vmlinuz-2.6.20<br />
+> cmdline root=/dev/hda1 ro<br />
+> initrd /boot/initrd.img-2.6.20<br />
+> <b>boot</b>
+</p>
+<p>
+This example will boot the first target example from the configuration file section, the syntax of the shell is exactly the same except you must type <b>boot</b> at the end to show you have finished configuring the boot target. Filenames may specify a disk at the beginning, just as in the configuration file.
+</p>
+
+<p>
+The <b>ls</b> command lists the contents of a directory, directories have slashes appended to their names. The disk can be omitted from the path in the following example to use the root device.
+</p>
+<p class="code">
+> <b>ls</b> (fd0)/<br />
+1970-01-01 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;./<br />
+2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;../<br />
+2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ldlinux.sys<br />
+2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;linux.cfg<br />
+2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;kexec-loader.conf<br />
+2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;syslinux.cfg<br />
+2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;README.html<br />
+2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;modules/<br />
+2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;initrd.img<br />
+2009-08-17 00:00&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;vmlinuz
+</p>
+
+<p>
+The <b>find</b> command searches directories for files that match a pattern, the pattern may contain the * and ? wildcards which have the same meaning as in most shells. The following example searches the floppy disk for any files containing "linux" in their name. The path can be omitted to search the entire disk once a root device has been selected.
+</p>
+<p class="code">
+> <b>find</b> *linux* (fd0)/<br />
+(fd0)/ldlinux.sys<br />
+(fd0)/linux.cfg<br />
+(fd0)/syslinux.cfg
 </p>
 
 <h3><a name="s2s3">2.3. Configuration File</a></h3>
